title provide functions added

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,12 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<% provide(:title, "About") %>
+
+    <h1>about us</h1>
+    <h3>Our mission is to save you time and money for the important things in life!</h3>
+    <p>In August 2011, the three of us founded RedMart with a simple mission - to save you time and money spent shopping for groceries and household essentials, so you can focus on the important things in life.
+
+    And now more than three years later, after a lot of hard work, challenges and learnings, we’ve built a service that is delivering on this promise.
+
+    We have over 25,000 products in stock, and are adding more regularly.  We offer these products at everyday low prices with regular sales and promotions.  We have a state-of-the-art website and mobile application to make ordering as easy as possible.  And we have the latest warehouse and delivery technologies to ensure your order gets to you as ordered and when you want.
+
+    We look forward to serving you and if you have any comments, suggestions or otherwise need to reach us, please email us (help@redmart.com) anytime!
+    </p>
