--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,15 @@
 <% provide(:title, "Home") %>
 
-
+<div class="center jumbotron">
     <h1>Welcome to Redmart</h1>
-    <p>
-      This is the home page for the
-      <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
-    </p>
+    <h2>
+        This is the home page for the
+        <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+        sample application.
+      </h2>
+
+      <%= link_to "Sign up now!", users_path, class: "btn btn-lg btn-primary" %>
+    </div>
+
+    <%= link_to image_tag("grocery.jpg", alt: "Rails logo"),
+                'http://rubyonrails.org/' %>
