--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
+<% provide(:title, 'Sign up') %>
 <h1>New Member Sign Up</h1>
-
+<p>This will be a signup page for new users.</p>
 <%= render 'form', user: @user %>
 
 <%= link_to 'Back', users_path %>
