--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,3 @@
 <% provide(:title, 'Sign up') %>
-<h1>New Member Sign Up</h1>
+<h1>Sign up</h1>
 <p>This will be a signup page for new users.</p>
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
