--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,17 +7,18 @@
        <li><%= link_to "About", about_path %></li>
        <li><%= link_to "Contact Us", contact_us_path %></li>
        <li><%= link_to "Start Shopping", 'https://redmart.com/sales' %></li>
-       <li><%= link_to "Sign up as Member", signup_path %></li>
+       <li><%= link_to "Sign up as Member", signup_path  %></li>
+       <li><%= link_to "Members List", users_path %></li>
 
         <% if logged_in? %>
-          <li><%= link_to "Users", current_user %></li>
+          <li><%= link_to "Your profile", current_user %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", '#' %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: "delete" %>
