--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, "Home") %>
 
+
 <div class="center jumbotron">
     <h1>Welcome to Redmart</h1>
     <h2>
@@ -7,9 +8,20 @@
         <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
         sample application.
       </h2>
-
       <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-    </div>
+</div>
 
-    <%= link_to image_tag("grocery.jpg", alt: "Rails logo"),
-                'http://rubyonrails.org/' %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+  </div>
+
+
+<% end %>
