added product model

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -13,6 +13,9 @@ $navbar-default-bg: red;
   box-sizing:         border-box;
 }
 
+
+
+
 /* universal */
 
 body {
@@ -99,8 +102,8 @@ input {
 #logo {
   float: left;
   margin-right: 10px;
-  font-size: 1.7em;
-  color: #fff;
+  font-size: 2em;
+  color: red;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
