--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,13 @@
 <footer class="footer">
   <small>
-    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="https://redmart.com/">Official Redmart</a>
+    The Redmart Company by Jonathan</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Products", '#' %></li>
+      <li><%= link_to "Reviews", reviews_path %></li>
+        <li><%= link_to "Loyalty Members", users_path %></li>
       <li><%= link_to "Contact", contact_us_path %></li>
     </ul>
   </nav>
