--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,10 @@
 <% provide(:title, "Home") %>
 
 
-<div class="center jumbotron">
+<div class="center jumbotron" id= "banner">
     <h1>Welcome to Redmart</h1>
     <h2>
-        This is the home page for the
-        <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-        sample application.
+        The Freshest Groceries delivered on your door step!
       </h2>
       <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
@@ -22,7 +20,7 @@
       </section>
     </aside>
     <div class="col-md-8">
-     <h3>Micropost Feed</h3>
+     <h3>Your review of our Services</h3>
      <%= render 'shared/feed' %>
    </div>
   </div>
